# pyram

./: .gitignore  LICENSE.txt  README.md  conda.yml  pyproject.toml
pyram/: PyRAM.py  PyRAMmp.py  matrc.py  outpt.py  raw_pyram.py  solve.py
pyram/Tests/: TestPyRAM.py  pyram_raw_pyram_comp.py
src/pyram/: config.py  environment.py  outpt.py  plotting.py  pyram.py  solve.py
src/tests/: test_config.py  test_pyram.py
