[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyram"
version = "1.2.2"
dependencies = ["numba", "numpy"]
authors = [
    { name = "Hunter Akins", email = "fakins@ucsd.edu" },
    { name = "William Jenkins", email = "wfjenkins@ucsd.edu" },
    { name = "Marcus Donnelly", email = "marcus.k.donnelly@gmail.com" },
]
description = "Python adaptation of the Range-dependent Acoustic Model (RAM)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
keywords = ["RAM", "Acoustics", "Parabolic Equation"]

[project.urls]
Homepage = "https://github.com/TritonOA/pyram"
Issues = "https://github.com/TritonOA/pyram/issues"

[tool.setuptools.packages.find]
where = ["src/"]
